--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "keen-slider": "^6.8.5",
     "object-keys": "^1.1.1",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
     "react-dom": "^18.2.0",
     "react-html5video": "^2.5.1",
     "react-router-dom": "^6.10.0",
