--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
@@ -11,7 +13,7 @@
     "@mui/material": "^5.12.1",
     "@mui/styled-engine-sc": "^5.12.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^14.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "keen-slider": "^6.8.5",
@@ -29,8 +31,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "cm": "cz",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "npx jest",
+    "test scripts": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -50,5 +54,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-jest": "^29.7.0",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "jest": "^29.7.0",
+    "react-test-renderer": "^18.2.0"
+  },
+  "config": {
+    "commitizen": {
+    "path": "cz-conventional-changelog"
+    }
   }
 }
