--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "start": "react-scripts start",
     "cm": "cz",
     "build": "react-scripts build",
-    "test": "npx jest",
+    "test": "jest test --transformIgnorePatterns \"node_modules/(?!telos-flix)/\" --env=jsdom",
     "test scripts": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -56,15 +56,25 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.23.3",
     "babel-jest": "^29.7.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "react-test-renderer": "^18.2.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   },
   "config": {
     "commitizen": {
-    "path": "cz-conventional-changelog"
+      "path": "cz-conventional-changelog"
     }
   }
 }
