--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-alert": "^7.0.3",
     "react-dom": "^18.2.0",
     "react-html5video": "^2.5.1",
+    "react-query": "^3.39.3",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
